# resiprocate_console_server_and_client

./: .gitignore  docker-compose.yml
client/: Dockerfile
client/app/: CMakeLists.txt
client/app/src/: client_logger.cpp  client_logger.h  main.cpp  message_transceiver.cpp  message_transceiver.h  user.cpp  user.h
client/app/test/etc/: README.MD  client-logger.conf  john.json  reg-server.xml  send-server.xml  user.json
client/app/test/nt/: tests.cpp
server/: Dockerfile
server/myapp/: CMakeLists.txt
server/myapp/etc/: server_logger.conf  users.json
server/myapp/src/: configuration.cpp  configuration.h  logger.cpp  logger.h  main.cpp  server.cpp  server.h
server/myapp/test/: test_list.cpp
server/myapp/test/etc/: uncrustify.cfg
server/myapp/test/etc/sipp/: README.MD  auth_and_message_to_server.xml  forwarding_scenario.xml
